[package]
name = "aoc2016"
version = "0.1.0"
edition = "2021"

[dependencies]
# assert_no_alloc = { version = "1.1.2", features = [ "backtrace" ], git = "https://github.com/Windfisch/rust-assert-no-alloc" }
assert_no_alloc = "1.1.2"
bumpalo = { version = "3.11.1", features = ["allocator_api", "collections"] }
hashbrown = { version = "0.13.1", features = ["nightly", "inline-more"], default-features = false }
memmap2 = "0.5.8"
nom = { version = "7.1.1", default-features = false }
rustc-hash = "1.1.0"

[profile.release]
codegen-units = 1
lto = true
