[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[dependencies]
# To see backtrace when there's an allocation to the global allocator somewhere unexpected
# assert_no_alloc = { version = "1.1.2", features = [ "backtrace" ], git = "https://github.com/Windfisch/rust-assert-no-alloc" }
assert_no_alloc = "1.1.2"
bumpalo = { version = "3.11.1", features = ["allocator_api", "collections"] }
hashbrown = { version = "0.13.1", features = ["nightly", "inline-more"], default-features = false }
heapless = "0.7.16"
memmap2 = "0.5.8"
nom = { version = "7.1.1", default-features = false }
num = { version = "0.4.0", default-features = false }
rustc-hash = "1.1.0"
tracing = { version = "0.1.37", features = ["attributes"], default-features = false }
tracing-chrome = { version = "0.7.0", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true }

[features]
trace = ["tracing-chrome", "tracing-subscriber"]

[profile.release]
codegen-units = 1
lto = true
